                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


____________________________________________________________________
** CHANGES ALONG siesta@uam.es--2006/siesta-devel--reference--2.5
--------------------------------------------------------------------

2008-01-11  14:00:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-9

Summary: Fix test.mk scripts

The std-test.mk script did not copy the output file to the main test directory.
The bsc-test.mk did not remove all the scratch files.

Fixed a typo in the input to the si2x1h test.

2008-01-11  13:55:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-8

Summary: Fix for structural supercell construction

Due to the accidental mis-use of a module variable, the routine coor
did not generate the supercell correctly when a %supercell block was used.

Added and additional warning if such a block is used when the structure is
input in Zmatrix form.

2007-12-17  14:25:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-7

Summary: Fix memory leak in dhscf

The array dvxcdn was allocated but never deallocated in dhscf. Actually,
it was never used in cellxc, so it has now been dimensioned trivially
to (1,1,1). The bug was introduced in the bsc-master-2.1 branch, at 
patch 27.

2007-11-22  18:45:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-6

Summary: New 'fdf' target in Makefile for tests

(E. Anglada)

New target for the test option: fdf calls. 
Requested by BSC so they can test the new fdf.

New files (new tests and missing xml output files for reference)
A/ Tests/var_cell_stress
A  Tests/Reference-xml/fire_benzene.xml
A  Tests/Reference-xml/si_coop.xml
A  Tests/var_cell_stress/.arch-ids/=id
A  Tests/var_cell_stress/.arch-ids/makefile.id
A  Tests/var_cell_stress/.arch-ids/var_cell_stress.fdf.id
A  Tests/var_cell_stress/.arch-ids/var_cell_stress.pseudos.id
A  Tests/var_cell_stress/makefile
A  Tests/var_cell_stress/var_cell_stress.fdf